# pos_next

./: .clauderc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FEATURES.md  POS_MIGRATION_PLAN.md  POS_SALE_INTEGRATION_PLAN.md  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
POS/: .claude.md  CHECKLIST.md  OFFLINE_IMPLEMENTATION_COMPLETE.md  OFFLINE_IMPLEMENTATION_STATUS.md  README.md  biome.json  components.d.ts  index.html  manifest.webmanifest  package.json  tailwind.config.js  vite.config.js
POS/public/: offline.html
POS/src/: App.vue  index.css  main.js  router.js  socket.js
POS/src/components/: ShiftClosingDialog.vue  ShiftOpeningDialog.vue
POS/src/composables/: useCountryCodes.js  useDialogState.js  useFormatters.js  useInvoice.js  useInvoiceFilters.js  useItems.js  useLazyLoad.js  useLocale.js  useLongPress.js  useOffline.js  usePOSEvents.js  usePWAInstall.js  usePermissions.js  usePosProfile.js  useRealtimePosProfile.js  useRealtimeStock.js  useShift.js  useStock.js  useToast.js
POS/src/data/: session.js  user.js
POS/src/pages/: Home.vue  Login.vue  POSSale.vue
POS/src/stores/: bootstrap.js  (+14 more)
docs/: QUICKSTART_VERSION.md  README.md  STARTUP_SEQUENCE.md  VERSION_CONTROL.md
pos_next/: __init__.py  hooks.py  install.py  modules.txt  patches.txt  realtime_events.py  uninstall.py  utils.py  validations.py
pos_next/api/: __init__.py  bootstrap.py  branding.py  credit_sales.py  customers.py  invoices.py  items.py  localization.py  offers.py  partial_payments.py  pos_profile.py  promotions.py  sales_invoice_hooks.py  shifts.py  utilities.py
pos_next/fixtures/: custom_field.json  print_format.json
pos_next/tasks/: branding_monitor.py  cleanup_expired_promotions.py
pos_next/translations/: ar.csv
scripts/: version-bump.sh
(+117 files in other folders)
